# seq-generator

./: .gitignore  CMakeLists.txt  README.md
include/: base_generator.h  thread_safe_generator.h
src/: base_generator.h  main.cpp  thread_safe_generator.h
tests/: CMakeLists.txt
tests/src/: sequence_generator_test.cpp
